# ai-assitant

./: .env  README.md  pyproject.toml
src/ai_assistant/: __init__.py  config.py  main.py  models.py
